# substraTEE-client

./: .gitignore  Cargo.toml  README.md
src/: extrinsic.rs  main.rs
