[package]
name = "substrate-thinclient"
version = "0.1.0"
authors = ["Alain Brenzikofer <news@brenzi.ch>"]
edition = "2018"

[dependencies]
ws = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#parity-codec = { version = "3.0", default-features = false }
#parity-codec-derive = { version = "3.0", default-features = false }
#primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
#srml_metadata = { package = "srml-metadata", git = "https://github.com/paritytech/substrate.git" }
hex = "0.3"
regex = "*"