[package]
name = "substrate-client"
version = "0.1.0"
authors = ["Alain Brenzikofer <news@brenzi.ch>"]
edition = "2018"

[dependencies]
ws = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git", default-features = false }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate.git" }
node-runtime = { git = "https://github.com/paritytech/substrate.git" }
#srml_metadata = { package = "srml-metadata", git = "https://github.com/paritytech/substrate.git" }
hex = "0.3"
regex = "*"
keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate.git" }
#test_client = { package = "substrate-test-client", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"primitives/std",
	"parity-codec/std",
    "runtime_primitives/std",
	"node-runtime/std",
]